--- a/FlooringOrderingSystem/FOS.Data/FOS.Data.csproj
+++ b/FlooringOrderingSystem/FOS.Data/FOS.Data.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{22B460DA-FEFA-4AEE-A2B0-19B9ABC8B455}</ProjectGuid>
+    <ProjectGuid>{5F3B7DE4-E635-4FF2-A985-A939484C742C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FOS.Models</RootNamespace>
-    <AssemblyName>FOS.Models</AssemblyName>
+    <RootNamespace>FOS.Data</RootNamespace>
+    <AssemblyName>FOS.Data</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,15 +41,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Interfaces\IOrderRepository.cs" />
-    <Compile Include="Interfaces\IProductRepository.cs" />
-    <Compile Include="Interfaces\ITaxRepository.cs" />
-    <Compile Include="Order.cs" />
-    <Compile Include="Product.cs" />
+    <Compile Include="Production\ProductionOrdersRepository.cs" />
+    <Compile Include="Production\ProductionProductsRepository.cs" />
+    <Compile Include="Production\ProductionTaxesRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Responses\Response.cs" />
-    <Compile Include="Tax.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\FOS.Models\FOS.Models.csproj">
+      <Project>{22b460da-fefa-4aee-a2b0-19b9abc8b455}</Project>
+      <Name>FOS.Models</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
