--- a/FlooringOrderingSystem/FOS.UI/App.config
+++ b/FlooringOrderingSystem/FOS.UI/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <appSettings>
+      <!-- value can be Dev  or Prod -->
+      <add key="Mode" value="Prod" />
+    </appSettings>
 </configuration>
