--- a/FlooringOrderingSystem/FOS.UI/FOS.UI.csproj
+++ b/FlooringOrderingSystem/FOS.UI/FOS.UI.csproj
@@ -48,12 +48,24 @@
     <Compile Include="Menu.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Workflows\AddOrderWorkflow.cs" />
+    <Compile Include="Workflows\DisplayOrdersWorkflow.cs" />
+    <Compile Include="Workflows\EditOrderWorkflow.cs" />
+    <Compile Include="Workflows\RemoveOrderWorkflow.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Workflows\" />
+    <ProjectReference Include="..\FOS.BLL\FOS.BLL.csproj">
+      <Project>{b290e95f-a707-4494-b519-c66c7c065794}</Project>
+      <Name>FOS.BLL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\FOS.Models\FOS.Models.csproj">
+      <Project>{22b460da-fefa-4aee-a2b0-19b9abc8b455}</Project>
+      <Name>FOS.Models</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
