--- a/FlooringOrderingSystem/FOS.UI/App.config
+++ b/FlooringOrderingSystem/FOS.UI/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
     <appSettings>
-      <!-- value can be Dev  or Prod -->
-      <add key="Mode" value="Prod" />
+      <!-- value can be Dev  or Prod or DB -->
+      <add key="Mode" value="DB" />
     </appSettings>
 </configuration>
